--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
-output/benfords_law_output/
+!output/!benfords_law_output/
 build/
 develop-eggs/
 dist/
